# Rocket

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  mpu6050.py  qmc5883l.py  razzismo.cpp  razzismo.dis  razzismo.elf  razzismo.elf.map  razzismo.hex  razzismo.uf2  sensors.cpp
Sensor_lib/: CMakeLists.txt  Makefile  cmake_install.cmake  sensors.h
elf2uf2/: CMakeCache.txt  Makefile  cmake_install.cmake  elf2uf2
elf2uf2/boot_uf2_headers/: Makefile  cmake_install.cmake
pico-sdk/: Makefile  cmake_install.cmake
pico-sdk/docs/: Makefile  cmake_install.cmake
pico-sdk/src/: Makefile  cmake_install.cmake
pico-sdk/src/common/: Makefile  cmake_install.cmake
pico-sdk/src/common/boot_picoboot/: Makefile  cmake_install.cmake
pico-sdk/src/common/boot_uf2/: Makefile  cmake_install.cmake
pico-sdk/src/common/pico_base/: Makefile  cmake_install.cmake
pico-sdk/src/common/pico_binary_info/: Makefile  cmake_install.cmake
pico-sdk/src/common/pico_bit_ops/: Makefile  cmake_install.cmake
pico-sdk/src/common/pico_divider/: Makefile  cmake_install.cmake
pico-sdk/src/common/pico_stdlib/: Makefile  cmake_install.cmake
pico-sdk/src/common/pico_sync/: Makefile  cmake_install.cmake
pico-sdk/src/common/pico_time/: Makefile  cmake_install.cmake
pico-sdk/src/common/pico_usb_reset_interface/: Makefile  cmake_install.cmake
pico-sdk/src/rp2040/: Makefile  cmake_install.cmake
pico-sdk/src/rp2_common/: Makefile  cmake_install.cmake
pico-sdk/tools/: Makefile  cmake_install.cmake
pioasm/: CMakeCache.txt  Makefile  cmake_install.cmake  pioasm
(+128 files in other folders)
